--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "react-bootstrap": "^2.8.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-pro-sidebar": "^1.1.0-alpha.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
-    "react-sidebar": "^3.0.2"
+    "react-sidebar": "^3.0.2",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
